LARGE STYLING UPDATE

--- a/ECM2434/Ecolution/templates/delete_account.html
+++ b/ECM2434/Ecolution/templates/delete_account.html
@@ -8,7 +8,7 @@
 
 {# ------------------------- MAIN CONTENT BLOCK ------------------------- #}
 {% block main %}
-    <div class="container">
+    <div class="container box_shadow">
         {# Warning message alerting the user that deletion is irreversible #}
         <h2 class="warning">⚠️ Warning: This action is irreversible!</h2>
         {# Message prompting the user to confirm account deletion #}
