Added space to Leaves

--- a/ECM2434/Ecolution/templates/events.html
+++ b/ECM2434/Ecolution/templates/events.html
@@ -230,7 +230,7 @@
                     {# Display event points (e.g., Leaves reward) #}
                     <div class="points">
                         <p id="points"></p>
-                        <p>  Leaves</p>
+                        <p>&nbsp;Leaves</p>
                     </div>
  
                     {# Map container to show event location #}
