Points to Leaves in tasks

--- a/ECM2434/Ecolution/templates/gamekeeper_events.html
+++ b/ECM2434/Ecolution/templates/gamekeeper_events.html
@@ -249,7 +249,7 @@
 
                 <div class="points">
                     <p id="points"></p>
-                    <p> Leaves</p>
+                    <p>&nbsp;Leaves</p>
                 </div>
 
                 <div class="flex_h flex_center">
